--- a/src/index.scss
+++ b/src/index.scss
@@ -229,7 +229,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	gap: 8px;
-	input {
+	input, textarea {
 		padding: 12px 16px;
 		&:focus {
 			outline: 1px solid vars.$accent-color;
