--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,17 +1,17 @@
 // font imports
-@import url("https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic");
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Manrope:wght@200..800&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Manrope:wght@200..800&display=swap');
 
 // fonts
-$Manrope: "Manrope", sans-serif;
-$Inter: "Inter", sans-serif;
-$Poppins: "Poppins", sans-serif;
-$Bebas: "Bebas Neue", sans-serif;
-$Preahvihear: "Preahvihear", sans-serif;
-$Roboto: "Roboto", sans-serif;
-$Plus: "Plus Jakarta Sans", sans-serif;
-$Poor: "Poor Story", sans-serif;
-$PoetsenOne: "PoetsenOne", sans-serif;
+$Manrope: 'Manrope', sans-serif;
+$Inter: 'Inter', sans-serif;
+$Poppins: 'Poppins', sans-serif;
+$Bebas: 'Bebas Neue', sans-serif;
+$Preahvihear: 'Preahvihear', sans-serif;
+$Roboto: 'Roboto', sans-serif;
+$Plus: 'Plus Jakarta Sans', sans-serif;
+$Poor: 'Poor Story', sans-serif;
+$PoetsenOne: 'PoetsenOne', sans-serif;
 
 // colors
 $primary-background-color: #0a0a0a;
@@ -29,8 +29,8 @@ $primary-button-color: #0a0a0a;
 $padding-page: 60px;
 $mxw-page: 1440px;
 $header-height: 80px;
+$padding-block: 80px;
 
 // mobile
 $padding-page-mobile: 19px;
-
-
+$padding-block-mobile: 40px;
