added primary-input-background-color as a dark color

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -21,6 +21,7 @@ $primary-text-color: #ffffff;
 $secondary-text-color: #c7c7c7;
 
 $primary-border-color: #484848;
+$primary-input-background-color: #121212;
 
 $accent-color: #d3e97a;
 $primary-button-color: #0a0a0a;
